--- a/Indocheck.html
+++ b/Indocheck.html
@@ -69,7 +69,7 @@
     <legend>🗣️ Taal & woorden</legend>
     <label><input type="checkbox" name="cultuur" value="1"> Je zegt vaker “aduh” dan “au”</label>
     <label><input type="checkbox" name="cultuur" value="1"> Je kent de betekenis van “pedis” en gebruikt dat woord</label>
-    <label><input type="checkbox" name="cultuur" value="1"> Je gebruikt woorden als “saja”, “lapar” of “kasian”</label>
+    <label><input type="checkbox" name="cultuur" value="1"> Je gebruikt woorden als “saya”, “lapar” of “kasian”</label>
     <label><input type="checkbox" name="cultuur" value="1"> Je begrijpt meteen wat iemand bedoelt met “sambal bij?”</label>
   </fieldset>
 
@@ -153,3 +153,4 @@ function calculate() {
 
 </body>
 </html>
+
